fix spacing and sizing on smaller screens

--- a/src/app.scss
+++ b/src/app.scss
@@ -3,7 +3,7 @@
 :root {
 	font-family: 'Outfit', sans-serif;
 	font-weight: 300;
-	font-size: 112.5%;
+	font-size: 100%;
 }
 
 * {
